# CosmicHub

./: .coverage-baseline.json  .dockerignore  .env  .env.backup  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .lint-baseline.json  .lint-full.json  .lint-top-rules.json  .markdownlintignore  .pre-commit-config.yaml  .prettierrc  .type-errors-baseline.json  ADVANCED_QA_SYSTEM_COMPLETE.md  AI_INTERPRETATION_IMPLEMENTATION_SUMMARY.md  ApiResult-Unification-Complete.md  BUDGET_OPTIMIZATION.md  BUILD_OPTIMIZATION.md  CLEANED_PROJECT_STRUCTURE.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUCCESS_REPORT.md  COMPONENT_LIBRARY_GUIDE.md  CONSOLE_ERRORS_FIXED.md  CosmicHub.code-workspace  DEPLOYMENT_GUIDE.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.astro  Dockerfile.healwave  ENHANCED_PROFILE_IMPLEMENTATION_SUMMARY.md  ENHANCEMENT_SUMMARY.md  EPHEMERIS_SERVER_COMPLETE.md  ERROR_BOUNDARIES_STATUS.md  FINAL_TODO_COMPLETION_SUMMARY.md  FONT_OPTIMIZATION.md  FREEMIUM_STRATEGY.md  HUMAN_DESIGN_GENE_KEYS_SUMMARY.md  (+79 more)
backend/: .dockerignore  .env.docker  .firebaserc  .flake8  COSMICHUB_PRIVACY_LEADERSHIP_SUMMARY.json  Dockerfile  MYPY_INTEGRATION_SUMMARY.md  app.log.1  app.log.2  app.log.3  app.log.4  app.log.5  astro_calculations.py  auth.py  check-types.sh  conftest.py  database.py  debug_env.py  firestore.indexes.json  firestore.rules  firestore.rules.enhanced  gdpr_compliance_improvement.py  integration_test_results.json  main.py  main_simple.py  mypy.ini  nohup.out  pets_implementation.py  priv_006_implementation.py  privacy_automation.py  (+17 more)
(+1754 files in other folders)
