[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.flake8]
max-line-length = 100
ignore = ["E203", "E266", "E501", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Imports that have type stubs
mypy_path = "$MYPY_CONFIG_FILE_DIR/types/stubs"

# Silence errors from unfixed third-party libraries
[[tool.mypy.overrides]]
module = "swisseph.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "prometheus_client.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "firebase_admin.*"
follow_imports = "skip"

# Relax for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
